PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <title>Poney</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 </head>
 <body>
-    coucou coucou
+    <p id="p1">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ligula sem, congue ac dignissim eget, eleifend vel nisl. Nulla viverra pretium ex nec fermentum. Pellentesque magna ipsum, rutrum sit amet faucibus vitae, ultricies eget ipsum. Nulla vestibulum risus turpis, quis bibendum lorem efficitur ut. Vivamus sollicitudin eleifend ligula eget condimentum. Ut scelerisque, augue non ultricies maximus, risus libero mollis tortor, eget luctus ipsum arcu a leo. Fusce viverra nunc nec quam viverra, iaculis porta tortor fringilla.
+    </p>
+
+    <p id="p2">
+        Vestibulum elementum finibus mi, at molestie ante scelerisque in. Donec eleifend, sapien a luctus ullamcorper, augue quam ultricies tortor, in pharetra nisl est feugiat metus. Nam dapibus ultrices urna at pharetra. Praesent volutpat, ante id fermentum vehicula, massa erat eleifend tortor, nec blandit velit felis sed mi. Curabitur dolor ex, egestas in libero sit amet, lobortis facilisis augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas sed mattis augue. Nulla commodo tincidunt commodo. Praesent gravida quam eget sem tempor, volutpat rutrum ex molestie. Nam non pulvinar ex. Sed quis lectus et neque posuere eleifend.
+    </p>
+
+    <p id="p3">
+        Nullam non commodo dui. Donec lacinia risus vel mauris euismod imperdiet. Proin nec euismod lectus. Sed dapibus ultrices metus sit amet lobortis. Donec gravida accumsan justo non luctus. Nam faucibus, mauris non laoreet fringilla, velit odio faucibus augue, quis ultricies sapien orci id felis. Morbi pellentesque mauris eget nunc mollis placerat. Nulla facilisi. Donec vel volutpat est. Nullam et turpis neque.
+        <img src="img/calais.jpg" alt="Calais"title="Calais" />
+    </p>
 </body>
 </html>
