PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Poney</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="icon" type="image/jpeg" href="img/GOT.jpeg" />
+
 </head>
 <body>
     <p id="p1">
@@ -18,7 +21,18 @@
 
     <p id="p3">
         Nullam non commodo dui. Donec lacinia risus vel mauris euismod imperdiet. Proin nec euismod lectus. Sed dapibus ultrices metus sit amet lobortis. Donec gravida accumsan justo non luctus. Nam faucibus, mauris non laoreet fringilla, velit odio faucibus augue, quis ultricies sapien orci id felis. Morbi pellentesque mauris eget nunc mollis placerat. Nulla facilisi. Donec vel volutpat est. Nullam et turpis neque.
-        <img src="img/calais.jpg" alt="Calais"title="Calais" />
+        <img src="img/calais2.jpg" alt="Calais"title="Calais" />
     </p>
+
+    <form method="post" action="">
+        <label>Nom : </label><input type="text" name="nom" /> <br />
+        <label>Date de naissance : </label><input type="date" name="naissance /"> <br />
+        <label>Age : </label><input type="text" name="age" /> <br />
+        <label>Facebook : </label><input type="url" name="facebook /"> <br />
+        <label>Email : </label><input type="email" name="mail" /> <br />
+        <label>Telephone : </label><input type="tel" name="telephone" /> <br />
+
+        <input type="submit">
+    </form>
 </body>
 </html>
