PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <form method="post" action="">
         <label>Nom : </label><input type="text" name="nom" /> <br />
         <label>Date de naissance : </label><input type="date" name="naissance /"> <br />
-        <label>Age : </label><input type="tel" name="age" /> <br />
+        <label>Age : </label><input type="number" name="age" /> <br />
         <label>Facebook : </label><input type="url" name="facebook /"> <br />
         <label>Email : </label><input type="email" name="mail" /> <br />
         <label>Telephone : </label><input type="tel" name="telephone" /> <br />
