PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Poney</title>
     <link rel="stylesheet" href="css/style.css">
+
     <script type="text/javascript" src="js/script.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" href="img/GOT.jpeg" />
+
+    <link rel="manifest" href="manifest.json" />
 
 </head>
 <body>
