PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <body>
     <header></header>
 
+
+
+    <!-- Corps -->
+
     <p id="p1">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ligula sem, congue ac dignissim eget, eleifend vel nisl. Nulla viverra pretium ex nec fermentum. Pellentesque magna ipsum, rutrum sit amet faucibus vitae, ultricies eget ipsum. Nulla vestibulum risus turpis, quis bibendum lorem efficitur ut. Vivamus sollicitudin eleifend ligula eget condimentum. Ut scelerisque, augue non ultricies maximus, risus libero mollis tortor, eget luctus ipsum arcu a leo. Fusce viverra nunc nec quam viverra, iaculis porta tortor fringilla.
     </p>
@@ -29,6 +33,10 @@
     </p>
 
     <section><img src="img/calais2.jpg" alt="Calais" title="Calais" /></section>
+
+
+
+    <!-- Formulaire -->
 
     <form method="post" action="">
         <label>Nom : </label><input type="text" name="nom" /> <br />
