PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <!-- Formulaire -->
 
     <form method="post" action="">
-        <label>Nom : </label><input type="text" name="nom" /> <br />
-        <label>Date de naissance : </label><input type="date" name="naissance /"> <br />
-        <label>Age : </label><input type="number" name="age" /> <br />
-        <label>Facebook : </label><input type="url" name="facebook /"> <br />
-        <label>Email : </label><input type="email" name="mail" /> <br />
-        <label>Telephone : </label><input type="tel" name="telephone" /> <br />
+        <input type="text" name="nom" placeholder="Nom" /> <br />
+        <input type="date" name="naissance" placeholder="Date de naissance" /> <br />
+        <input type="number" name="age" placeholder="Age"/> <br />
+        <input type="url" name="facebook" placeholder="Facebook" /> <br />
+        <input type="email" name="mail" placeholder="Adresse mail" /> <br />
+        <input type="tel" name="telephone" placeholder="Téléphone" /> <br />
 
         <input type="submit">
     </form>
