PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <header></header>
+    <header></header> <br />
 
 
 
@@ -39,6 +39,7 @@
     <!-- Formulaire -->
 
     <form method="post" action="">
+        <h3>Formulaire</h3>
         <input type="text" name="nom" placeholder="Nom" /> <br />
         <input type="date" name="naissance" placeholder="Date de naissance" /> <br />
         <input type="number" name="age" placeholder="Age"/> <br />
