PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" href="img/GOT.jpeg" />
-
-    <!-- <link rel="manifest" href="manifest.json" /> -->
-
 </head>
 <body>
     <h1>M4105C : Un super module</h1>
@@ -35,6 +32,32 @@
 
     <section><img src="img/calais2.jpg" alt="Calais" title="Calais" /></section>
 
+    <br />
+
+    <section>
+        <table>
+            <tr>
+                <th>Sports</th>
+                <td>Tennis de table</td>
+                <td>Football</td>
+                <td>Poney</td>
+                <td>Curling</td>
+                <td>Patinnage artistique</td>
+                <td>Basketball</td>
+            </tr>
+            <tr>
+                <th>Compétitions</th>
+                <td>Jeux olympiques</td>
+                <td>Championnats d'Europe</td>
+                <td>Coupe du monde</td>
+                <td>Championnats régionnaux</td>
+                <td>Coupe district</td>
+                <td>NBA</td>
+            </tr>
+        </table>
+    </section>
+
+    <br />
 
 
     <!-- Formulaire -->
