PONEY ARC EN CIEL SLIP KANGOUROU

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
 
     <form method="post" action="">
         <h3>Formulaire</h3>
-        <input type="text" name="nom" placeholder="Nom" /> <br />
-        <input type="date" name="naissance" placeholder="Date de naissance" /> <br />
-        <input type="number" name="age" placeholder="Age"/> <br />
-        <input type="url" name="facebook" placeholder="Facebook" /> <br />
-        <input type="email" name="mail" placeholder="Adresse mail" /> <br />
-        <input type="tel" name="telephone" placeholder="Téléphone" /> <br />
-
-        <input type="submit">
+        <div>
+            <input type="text" name="nom" placeholder="Nom" /> <br />
+            <input type="date" name="naissance" placeholder="Date de naissance" /> <br />
+            <input type="number" name="age" placeholder="Age" /> <br />
+            <input type="url" name="facebook" placeholder="Facebook" /> <br />
+            <input type="email" name="mail" placeholder="Adresse mail" /> <br />
+            <input type="tel" name="telephone" placeholder="Téléphone" /> <br />
+            <input type="submit">
+        </div>
     </form>
 </body>
 </html>
